--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .logo-web-span{
-    color: #4D5AE5;
+    color: #2e2f42;
 }
 li{
     list-style-type: none;
@@ -8,24 +8,26 @@ a{
     text-decoration: none;
 }
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:  "Roboto" sans-serif;
+    color: #434455;
+    background-color: #ffffff;
 }
 .header{
     background-color: #E7E9FC;
 }
 .header-logo{
     color: #2E2F42;
-    font-family: Raleway;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 21px;       
+    font-family: "Raleway",sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;       
 }
 .header-link{
-        font-family: Roboto;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 24px;
-       color: #2E2F42;
+        color: #2E2F42;
+            font-family: "Raleway", sans-serif;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 21px;
         
 }
 .header-link:hover{
