--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-.logo-web-span{
-    color: #2e2f42;
-}
+/*********************** all setings ***********************/
 li{
     list-style-type: none;
 }
@@ -8,73 +6,164 @@ a{
     text-decoration: none;
 }
 body{
-    font-family:  "Roboto" sans-serif;
+    font-family: "Roboto", sans-serif;
+    background-color: #fff;
     color: #434455;
-    background-color: #ffffff;
 }
-.header{
+/*********************** header ***********************/
+.header {
     background-color: #E7E9FC;
 }
-.header-logo{
-    color: #2E2F42;
-    font-family: "Raleway",sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 21px;       
-}
-.header-link{
-        color: #2E2F42;
-            font-family: "Raleway", sans-serif;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 21px;
-        
-}
-.header-link:hover{
-    color: #404BBF;
-}
-.header-link:active {
-    color: #404BBF;
-}
-.address-link{
-  color: #434455;
-        font-family: Roboto;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-    
+.navigation{}
 
+.header-logo {
+    color: #4D5AE5;
+    text-transform: uppercase;
+    line-height: 1.17;
+    letter-spacing: 0.03;
 }
-.address-link:hover{
+
+.logo-web-span {
+    color: #2E2F42;
+}
+
+.header-link {
+    color: #2E2F42;
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+}
+.header-link:hover {
     color: #404BBF;
 }
-.hero{
-    background-color: #2E2F42;
-    width: 1440px;
-    height: 600px;
+.header-link:active{
+    text-decoration: underline;
+    color: #404BBF;
 }
-.hero-tittle{
-     font-size: 56px;
-        font-weight: 700;
-        line-height: 60px;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #ffffff;
+
+.address-link {
+    color: #434455;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
-.hero-button{
-    width: Hug (169px)px;
-        height: Hug (56px)px;
-        top: 428px;
-        left: 636px;
-        padding: 16px 32px 16px 32px;
-        gap: 10px;
-        border-radius: 4px 0px 0px 0px;
-        opacity: 0px;
+.address-link:hover {
+    color: #404BBF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+/*********************** hero ***********************/
+
+.hero {
+ background-color: #2E2F42;
+}
+.hero-tittle {
+    color: #ffffff;
+    line-height: 1.07;
+    font-size: 56px;
+}
+
+.hero-button {
     background-color: #4D5AE5;
     color: #ffffff;
-    cursor: pointer;
-
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04;
 }
-.hero-button:hover{
-background-color: #404BBF;
+.hero-button:hover {
+    background-color: #9747FF;
+}
+
+.hero-button:focus {
+    background-color: #9747FF;
+}
+/*********************** section-abaut ***********************/
+.abaut-subtitle{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em; 
+    color: #2E2F42;
+}
+.abaut-text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455 ;
+}
+/*********************** section-team ***********************/
+.team{
+    background-color:#F4F4FD;
+}
+.team-title{
+    color: #2E2F42;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+.team-list{
+    background-color: #ffffff;
+}
+.team-subtitle{
+    color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+.team-text{
+    color: #434455;
+    font-size: 16px;
+     font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+/*********************** portfolio ***********************/
+.portfolio{
+    background-color: #E7E9FC;
+}
+.portfolio-title{
+    color: #2E2F42;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+}
+.portfolio-subtitle{
+    color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+.portfolio-text{
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+/*********************** footer ***********************/
+.footer{
+    background-color: #2E2F42;
+}
+.footer-link{
+   color: #4D5AE5;
+   font-family: Raleway;
+   font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+}
+.footer-span{
+    color: #F4F4FD;
+}
+.footer-text{
+    color: #F4F4FD;font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 }
