--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,10 @@ body{
     color: #4D5AE5;
     text-transform: uppercase;
     line-height: 1.17;
-    letter-spacing: 0.03;
+    letter-spacing: 0.03em;
+    line-height: 21px;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .logo-web-span {
@@ -29,8 +32,8 @@ body{
 
 .header-link {
     color: #2E2F42;
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
+        font-family: "Raleway", sans-serif;
+        font-weight: 700;
 }
 .header-link:hover {
     color: #404BBF;
@@ -44,8 +47,16 @@ body{
     color: #434455;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .address-link:hover {
+    color: #404BBF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+.address-link:focus {
     color: #404BBF;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -59,6 +70,8 @@ body{
     color: #ffffff;
     line-height: 1.07;
     font-size: 56px;
+    text-align: center;
+    letter-spacing: 0.02em;
 }
 
 .hero-button {
@@ -68,14 +81,15 @@ body{
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.04;
+    letter-spacing: 0.04em;
+    cursor: pointer;
 }
 .hero-button:hover {
-    background-color: #9747FF;
+    background-color: #404BBF;
 }
 
 .hero-button:focus {
-    background-color: #9747FF;
+    background-color: #404BBF;
 }
 /*********************** section-abaut ***********************/
 .abaut-subtitle{
@@ -100,9 +114,10 @@ body{
     color: #2E2F42;
     font-size: 36px;
     font-weight: 700;
-    line-height: 40px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    text-transform: capitalize;
 }
 .team-list{
     background-color: #ffffff;
@@ -129,8 +144,10 @@ body{
     color: #2E2F42;
     font-size: 36px;
     font-weight: 700;
-    line-height: 40px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
 }
 .portfolio-subtitle{
     color: #2E2F42;
@@ -152,7 +169,7 @@ body{
 }
 .footer-link{
    color: #4D5AE5;
-   font-family: Raleway;
+   font-family: "Raleway", sans-serif;
    font-size: 18px;
     font-weight: 700;
     line-height: 21px;
@@ -164,6 +181,7 @@ body{
 .footer-text{
     color: #F4F4FD;font-size: 16px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
+    text-transform: uppercase;
 }
