--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,20 @@ body{
 }
 .navigation{}
 
+address{
+    font-style: normal
+}
+
 .header-logo {
     color: #4D5AE5;
+    font-family: "Raleway", sans-serif;
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
     line-height: 21px;
     font-weight: 700;
     font-size: 18px;
+    line-height: 1.17
 }
 
 .logo-web-span {
@@ -33,10 +39,15 @@ body{
 .header-link {
     color: #2E2F42;
         font-family: "Raleway", sans-serif;
-        font-weight: 700;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
 }
 .header-link:hover {
     color: #404BBF;
+}
+.header-link:focus {
+    color: #404bbf;
 }
 .header-link:active{
     text-decoration: underline;
@@ -174,6 +185,8 @@ body{
     font-weight: 700;
     line-height: 21px;
     letter-spacing: 0.03em;
+    line-height: 1.17;
+    text-transform: uppercase;
 }
 .footer-span{
     color: #F4F4FD;
@@ -181,7 +194,7 @@ body{
 .footer-text{
     color: #F4F4FD;font-size: 16px;
     font-weight: 400;
-    line-height: 1.17;
+    line-height: 1.15;
     letter-spacing: 0.02em;
-    text-transform: uppercase;
+
 }
