--- a/css/styles.css
+++ b/css/styles.css
@@ -192,10 +192,11 @@ address{
     color: #F4F4FD;
 }
 .footer-text{
-    color: #F4F4FD;font-size: 16px;
+    color: #F4F4FD;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1.15;
+    line-height: 24px;
     letter-spacing: 0.02em;
-    line-height: 1.5;
-
+    text-align: left;
+    line-height: 1.5
 }
