--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ padding-top: 188px;
 .abaut-item{
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 24px;
 }
 
 .abaut-list{
@@ -202,8 +202,12 @@ padding-top: 188px;
 
 .abaut-container{
     max-width: 1158px;
-    padding: 120px 0;
+    
    
+}
+
+.abaut{
+    padding: 120px 0;
 }
 
 /*********************** section-team ***********************/
