--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,14 @@ padding-top: 188px;
 
 /*********************** portfolio ***********************/
 .portfolio{
-    
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.portfolio-list-text{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-item{
@@ -288,8 +295,7 @@ padding-top: 188px;
 }
 
 .portfolio-container{
-    padding-top: 120px;
-    padding-bottom: 120px;
+
 }
 
 .portfolio-title{
