--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,19 @@ ul,ol{
     margin: 0;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 /*********************** header ***********************/
 .header {
     border-bottom: 1px solid #e7e9fc;
@@ -199,7 +212,7 @@ padding-top: 188px;
 
 
 .abaut-title{
-    visibility: hidden;
+
 }
 
 .abaut-container{
