--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ border-radius: 4px;
 /*********************** hero ***********************/
 
 .hero {
+    max-width: 1440px;
  background-image: linear-gradient(
     to bottom,
     rgba(46, 47, 66, 0.7),
@@ -163,6 +164,9 @@ border-radius: 4px;
     ;
 padding-top: 188px;
     padding-bottom: 188px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .hero-tittle {
     color: #ffffff;
@@ -190,7 +194,8 @@ padding-top: 188px;
     margin: 0 auto;
     margin-top: 48px;
     border: none;
-    min-width: 169px
+    min-width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover {
     background-color: #404BBF;
@@ -290,10 +295,17 @@ padding-top: 188px;
 .team-list{
     background-color: #ffffff;
     border-radius: 0 0 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-list:first-child {
     width: calc((100% - 72px) / 4);
+}
+
+.team-item-icon{
+    height: 40px;
 }
 
 .team-subtitle{
@@ -365,6 +377,35 @@ padding-top: 188px;
 .portfolio-container{
 
 }
+
+.portfolio-list:hover .portfolio-text-img{
+    transform: translateY(0);
+}
+
+.portfolio-list-img{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-text-img{
+    position: absolute;
+    top: 0;
+    background-color: rgba(77, 90, 229, 1);
+    width: 100%;
+    height: 100%;
+    font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        padding: 40px 32px;
+        color: rgba(244, 244, 253, 1);
+        transform: translateY(100%);
+        transition: 300ms;
+}
+
+
 
 .portfolio-title{
     color: #2E2F42;
