--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,7 @@ padding-top: 188px;
 
 .portfolio-list:hover .portfolio-text-img{
     transform: translateY(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-img{
@@ -403,6 +404,7 @@ padding-top: 188px;
         color: rgba(244, 244, 253, 1);
         transform: translateY(100%);
         transition: 300ms;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
