--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ ul,ol{
 /*********************** header ***********************/
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container{
@@ -86,6 +87,7 @@ address{
     display: flex;
     align-items: center;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .header-link.current {
@@ -102,6 +104,17 @@ width: 100%;
 height: 4px;
 background-color: #4D5AE5;
 border-radius: 4px;
+}
+
+.header-link.current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #4D5AE5;
+    border-radius: 4px;
 }
 
 .header-item-address{
@@ -140,6 +153,7 @@ border-radius: 4px;
     letter-spacing: 0.02em;
     display: block;
         padding: 24px 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover {
     color: #404BBF;
@@ -167,6 +181,7 @@ padding-top: 188px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
 }
 .hero-tittle {
     color: #ffffff;
@@ -403,8 +418,8 @@ padding-top: 188px;
         padding: 40px 32px;
         color: rgba(244, 244, 253, 1);
         transform: translateY(100%);
-        transition: 300ms;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        /* transition: 300ms; */
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
