--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ border-radius: 4px;
     bottom: -1px;
     width: 100%;
     height: 4px;
-    background-color: #4D5AE5;
-    border-radius: 4px;
+    background-color: #404bbf;;
+    border-radius: 2px;
 }
 
 .header-item-address{
@@ -132,6 +132,7 @@ border-radius: 4px;
         letter-spacing: 0.02em;
         display: block;
         padding: 24px 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover {
     color: #404BBF;
@@ -457,6 +458,8 @@ padding-top: 188px;
 .footer{
     background-color: #2E2F42;
     padding: 100px 0;
+    display: flex;
+    
 }
 .footer-link{
    color: #4D5AE5;
@@ -488,4 +491,25 @@ padding-top: 188px;
 
 .footer-container{
   
+}
+
+.footer-soc-text{
+    
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        color: rgba(255, 255, 255, 1);
+        margin-bottom: 16px;
+}
+
+.footer-icon-container{
+    
+}
+
+.footer-icon-list{
+    display: flex;
+    gap: 16px;
 }
