--- a/css/styles.css
+++ b/css/styles.css
@@ -514,3 +514,23 @@ padding-top: 188px;
     display: flex;
     gap: 16px;
 }
+
+.svg-soc-item-footer{
+    height: 40px;
+}
+
+.footer-soc-link{
+    width: 100%;
+    height: 100%;
+    
+   
+}
+
+.footer-icon-item{
+    width: 40px;
+    height: 40px;
+    background-color: rgba(77, 90, 229, 1);
+    border-radius: 50%;
+    display: flex;
+    
+}
