--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,22 @@ padding-top: 188px;
 
 .team-item-icon{
     height: 40px;
+    width: 40px;
+    background-color: rgba(77, 90, 229, 1);
+    border-radius: 50%;
+}
+
+.team-item-icon:hover{
+    background-color: rgba(64, 75, 191, 1);
+}
+
+.team-soc-link{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .team-subtitle{
@@ -362,7 +378,7 @@ padding-top: 188px;
 }
 
 .icon-soc-list{
-    fill: rgba(77, 90, 229, 1);
+   
 }
 
 .icon-soc-list:hover {
@@ -522,7 +538,9 @@ padding-top: 188px;
 .footer-soc-link{
     width: 100%;
     height: 100%;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
 }
 
@@ -531,6 +549,9 @@ padding-top: 188px;
     height: 40px;
     background-color: rgba(77, 90, 229, 1);
     border-radius: 50%;
-    display: flex;
-    
 }
+
+.footer-icon-item:hover{
+background-color: rgba(49, 208, 170, 1);
+}
+
