--- a/css/styles.css
+++ b/css/styles.css
@@ -323,12 +323,6 @@ padding-top: 188px;
 .team-item-icon{
     height: 40px;
     width: 40px;
-    background-color: rgba(77, 90, 229, 1);
-    border-radius: 50%;
-}
-
-.team-item-icon:hover{
-    background-color: rgba(64, 75, 191, 1);
 }
 
 .team-soc-link{
@@ -337,7 +331,13 @@ padding-top: 188px;
     height: 100%;
     align-items: center;
     justify-content: center;
+    background-color: rgba(77, 90, 229, 1);
+        border-radius: 50%;
     
+}
+
+.team-soc-link:hover{
+    background-color: rgba(64, 75, 191, 1);
 }
 
 .team-subtitle{
@@ -380,12 +380,6 @@ padding-top: 188px;
 .icon-soc-list{
    
 }
-
-.icon-soc-list:hover {
-    fill: rgba(64, 75, 191, 1);
-}
-
-
 
 
 /*********************** portfolio ***********************/
@@ -541,17 +535,16 @@ padding-top: 188px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+background-color: rgba(77, 90, 229, 1);
+    border-radius: 50%;
 }
 
 .footer-icon-item{
     width: 40px;
     height: 40px;
-    background-color: rgba(77, 90, 229, 1);
-    border-radius: 50%;
 }
 
-.footer-icon-item:hover{
+.footer-soc-link:hover{
 background-color: rgba(49, 208, 170, 1);
 }
 
