--- a/css/styles.css
+++ b/css/styles.css
@@ -333,10 +333,15 @@ padding-top: 188px;
     justify-content: center;
     background-color: rgba(77, 90, 229, 1);
         border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .team-soc-link:hover{
+    background-color: #404bbf;
+}
+
+.team-soc-link:focus{
     background-color: #404bbf;
 }
 
@@ -378,7 +383,7 @@ padding-top: 188px;
 }
 
 .icon-soc-list{
-   
+   fill: #f4f4fd;
 }
 
 
@@ -550,3 +555,6 @@ background-color: rgba(77, 90, 229, 1);
 background-color: #31d0aa;
 }
 
+.footer-soc-link:focus {
+    background-color: #31d0aa;
+}
