--- a/css/styles.css
+++ b/css/styles.css
@@ -405,8 +405,12 @@ padding-top: 188px;
     gap: 48px 24px;
 }
 
-.portfolio-container{
+.portfolio-list{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.portfolio-list:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list:hover .portfolio-text-img{
@@ -434,7 +438,6 @@ padding-top: 188px;
         padding: 40px 32px;
         color: rgba(244, 244, 253, 1);
         transform: translateY(100%);
-        /* transition: 300ms; */
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -543,7 +546,7 @@ padding-top: 188px;
     align-items: center;
 background-color: rgba(77, 90, 229, 1);
     border-radius: 50%;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-item{
