--- a/css/styles.css
+++ b/css/styles.css
@@ -561,3 +561,223 @@ background-color: #31d0aa;
 .footer-soc-link:focus {
     background-color: #31d0aa;
 }
+
+
+
+.footer-input{
+    width: 264px;
+    height: 40px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: #fff;
+}
+
+.text-subscribe{
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.footer-form{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.footer-subscribe{
+    margin-left: 80px;
+}
+
+
+.footer-input::placeholder{
+color: rgba(255, 255, 255, 0.6);
+font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-align: left;
+}
+
+.button-footer{
+    width: 165px;
+    height: 40px;
+    background-color: rgba(77, 90, 229, 1);
+    border-radius: 4px;
+    color: #fff;
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.04em;
+        text-align: center;
+        padding: 8px, 24px, 8px, 24px;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+}
+
+.subscribe-icon{
+    fill: #fff;
+}
+
+.ebutton{
+    display: flex;
+    gap: 16px;
+}
+
+
+/* backdrop */
+
+.backdrop{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+}
+
+.modal{
+    width: 408px;
+    height: 584px;
+    background-color: #fff;
+    position: absolute;
+    padding: 24px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.btn-modal{
+    width: 24px;
+    height: 24px;
+    display: block;
+    margin-bottom: 16px;
+    margin-left: auto;
+    border-radius: 100%;
+    background-color: rgba(231, 233, 252, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1)
+}
+
+.modal-close-icom{
+    fill: rgba(46, 47, 66, 1);
+}
+
+.text-modal{
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: rgba(46, 47, 66, 1);
+        margin-bottom: 16px;
+}
+
+.input-modal{
+    width: 360px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    border: 1.25px solid rgba(46, 47, 66, 1);
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
+
+.input-modal:focus, :hover{
+    border-color: rgba(77, 90, 229, 1);
+}
+
+.input-modal:focus,
+:hover + .icon-input{
+    fill: rgba(77, 90, 229, 1);
+}
+
+.input-box{
+position: relative;
+}
+
+.icon-input{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+}
+
+.area-modal{
+    width: 360px;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-top: 4px;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+}
+
+.label-modal{
+        font-family: Roboto;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.04em;
+        text-align: left;
+        color: rgba(142, 143, 153, 1);
+}
+
+.check-text{
+        font-family: Roboto;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.04em;
+        text-align: left;
+}
+
+.check-text-link{
+    color: rgba(77, 90, 229, 1);
+    text-decoration: underline;
+}
+
+.check-box{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.form-modal{
+    margin-bottom: 24px;
+}
+
+.btn-modal-send{
+    width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(77, 90, 229, 1);
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.04em;
+        text-align: center;
+}
