--- a/css/styles.css
+++ b/css/styles.css
@@ -653,21 +653,21 @@ font-family: Roboto;
     background-color: rgba(46, 47, 66, 0.4);
     position: fixed;
     top: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal{
     width: 408px;
-    height: 584px;
-    background-color: #fff;
+    min-height: 584px;
+    background-color: #fcfcfc;;
     position: absolute;
     padding: 24px;
     border-radius: 4px;
-    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-    top: 80px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-modal{
@@ -676,7 +676,7 @@ font-family: Roboto;
     display: block;
     margin-bottom: 16px;
     margin-left: auto;
-    border-radius: 100%;
+    border-radius: 50%;
     background-color: rgba(231, 233, 252, 1);
     border: 1px solid rgba(0, 0, 0, 0.1)
 }
