--- a/css/styles.css
+++ b/css/styles.css
@@ -661,7 +661,7 @@ font-family: Roboto;
     min-height: 584px;
     background-color: #fcfcfc;;
     position: absolute;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     top: 50%;
@@ -673,16 +673,43 @@ font-family: Roboto;
 .btn-modal{
     width: 24px;
     height: 24px;
-    display: block;
+   position: absolute;
+   top: 24px;
+   right: 24px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   cursor: pointer;
+   padding: 0;
     margin-bottom: 16px;
     margin-left: auto;
     border-radius: 50%;
     background-color: rgba(231, 233, 252, 1);
-    border: 1px solid rgba(0, 0, 0, 0.1)
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-modal:hover{
+    background-color: #404bbf;
+    border: none;
+}
+
+.btn-modal:hover .modal-close-icom{
+    fill: #ffffff;
+}
+
+.btn-modal:focus{
+    background-color: #404bbf;
+    border: none;
+}
+
+.btn-modal:focus .modal-close-icom {
+    fill: #ffffff;
 }
 
 .modal-close-icom{
     fill: rgba(46, 47, 66, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .text-modal{
@@ -703,7 +730,6 @@ font-family: Roboto;
     background-color: transparent;
     padding-left: 38px;
     border: 1.25px solid rgba(46, 47, 66, 1);
-    margin-top: 4px;
     margin-bottom: 8px;
 }
 
@@ -718,6 +744,7 @@ font-family: Roboto;
 
 .input-box{
 position: relative;
+margin-bottom: 8px;
 }
 
 .icon-input{
@@ -745,6 +772,13 @@ position: relative;
         letter-spacing: 0.04em;
         text-align: left;
         color: rgba(142, 143, 153, 1);
+        line-height: 1.17;
+        display: block;
+        margin-bottom: 4px;
+}
+
+.input-svg-box{
+    position: relative;
 }
 
 .check-text{
