--- a/css/styles.css
+++ b/css/styles.css
@@ -731,6 +731,9 @@ font-family: Roboto;
     padding-left: 38px;
     border: 1.25px solid rgba(46, 47, 66, 1);
     margin-bottom: 8px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-modal:focus, :hover{
@@ -752,6 +755,8 @@ margin-bottom: 8px;
     top: 50%;
     transform: translateY(-50%);
     left: 16px;
+    fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .area-modal{
