--- a/css/styles.css
+++ b/css/styles.css
@@ -756,17 +756,36 @@ margin-bottom: 8px;
     transform: translateY(-50%);
     left: 16px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #8e8f99;
+}
 
+.label-modal{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    display: block;
+    margin-bottom: 4px;
 }
 
 .area-modal{
-    width: 360px;
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    margin-top: 4px;
     padding: 8px 16px;
     margin-bottom: 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.area-modal:focus{
+    border-color: #4D5AE5;
 }
 
 .textarea-box{
