--- a/css/styles.css
+++ b/css/styles.css
@@ -805,13 +805,29 @@ margin-bottom: 8px;
     position: relative;
 }
 
-.check-text{
+.label-checkbox{
         font-family: Roboto;
         font-size: 12px;
         font-weight: 400;
         line-height: 14px;
         letter-spacing: 0.04em;
         text-align: left;
+        line-height: 1.17;
+        color: #8e8f99;
+}
+
+.span-checkbox{
+   width: 16px;
+   height: 16px;
+   border: 1px solid rgba(46, 47, 66, 0.4);
+   border-radius: 2px; 
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+     border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+   fill: transparent;
 }
 
 .check-text-link{
@@ -823,6 +839,7 @@ margin-bottom: 8px;
     display: flex;
     align-items: center;
     gap: 8px;
+    margin-bottom: 24px;
 }
 
 .form-modal{
