--- a/css/styles.css
+++ b/css/styles.css
@@ -874,6 +874,6 @@ margin-bottom: 8px;
         line-height: 24px;
         letter-spacing: 0.04em;
         text-align: center;
-        background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         cursor: pointer;
 }
