--- a/css/styles.css
+++ b/css/styles.css
@@ -851,7 +851,7 @@ margin-bottom: 8px;
  visibility: hidden;
 }
 
-.chb-input:checked + .span-checkbox{
+.chb-input:checked + .user-privacy{
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
