--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body{
     background-color: #fff;
     color: #434455;
     width: 320px;
+    margin: 0 auto;
 }
 p,h1,h2,h3,h4,h5,h6{
     margin: 0;
